--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                     <!-- home content -->
                     <div class="col-md-10 col-md-offset-1">
                         <div class="home-content">
-                            <h2 class="white-text">we are a dedicated freelance web designer & developer based in Beirut- Lebanon.</h2>
+                            <h2 class="white-text">we are a dedicated freelance web designers & developers based in Beirut- Lebanon.</h2>
                             <p class="white-text">
-                                Highly experienced in crafting and designing your business needs.
+                                Highly experienced in crafting your business needs.
                             </p>
                             <button class="main-btn" onclick="window.location.href='#about'">Get Started!</button>
                         </div>
@@ -134,7 +134,7 @@
                         <h3>Fully Customizible</h3>
                         <a href="#" onclick="$('p').slideToggle('slow');return false;">
                             <p style="display:none;">
-                                we provide you with a fully customised website, tailor made to you business need
+                                we provide you with a fully customized website, tailor-made to you business need
                             </p>
                             <u> Read more</u>
                         </a>
